src/main/bkool/parser/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "':='", "'boolean'", "'break'", 
                     "'class'", "'continue'", "'do'", "'else'", "'extends'", 
                     "'float'", "'if'", "'int'", "'new'", "'string'", "'then'", 
                     "'for'", "'return'", "'true'", "'false'", "'void'", 
                     "'nil'", "'this'", "'final'", "'static'", "'to'", "'downto'", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'\\'", "'%'", 
                     "'!='", "'=='", "'<'", "'>'", "'<='", "'>='", "'||'", 
                     "'&&'", "'!'", "'^'", "'['", "']'", "'{'", "'}'", "'('", 
                     "')'", "';'", "':'", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "EQ", "ASSIGN", "BOOLEAN", "BREAK", "CLASS", 
                      "CONTINUE", "DO", "ELSE", "EXTENDS", "FLOAT", "IF", 
                      "INT", "NEW", "STRING", "THEN", "FOR", "RETURN", "TRUE", 
                      "FALSE", "VOID", "NIL", "THIS", "FINAL", "STATIC", 
                      "TO", "DOWNTO", "ID", "ADD", "SUB", "MUL", "FLDIV", 
                      "INDIV", "MOD", "NOTEQUAL", "EQUAL", "LESS", "GREATER", 
                      "LQ", "GQ", "OR", "AND", "NOT", "CONCA", "LSB", "RSB", 
                      "LP", "RP", "LB", "RB", "SEMI", "COLON", "DOT", "COMMA", 
                      "INTLIT", "FLOATLIT", "BOOLIT", "STRINGLIT", "ARRLIT", 
                      "BLOCK_COMMENT", "LINE_COMMENT", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classDecle = 1
    RULE_inheri = 2
    RULE_classBody = 3
    RULE_members = 4
    RULE_attribute = 5
    RULE_mulable = 6
    RULE_immutable = 7
    RULE_typAttribute = 8
    RULE_primitive_type = 9
    RULE_array_type = 10
    RULE_size = 11
    RULE_class_type = 12
    RULE_nonNullAttlist = 13
    RULE_attName = 14
    RULE_exprs = 15
    RULE_expr1 = 16
    RULE_expr2 = 17
    RULE_expr3 = 18
    RULE_expr4 = 19
    RULE_expr5 = 20
    RULE_expr6 = 21
    RULE_expr7 = 22
    RULE_expr8 = 23
    RULE_expr9 = 24
    RULE_expr10 = 25
    RULE_operands = 26
    RULE_expr_list = 27
    RULE_index_Expr = 28
    RULE_method = 29
    RULE_normalMethod = 30
    RULE_static_method = 31
    RULE_unstatic_method = 32
    RULE_typMethod = 33
    RULE_paramsList = 34
    RULE_params = 35
    RULE_param = 36
    RULE_idList = 37
    RULE_block_stmts = 38
    RULE_vardecle = 39
    RULE_stmts = 40
    RULE_assign_stmts = 41
    RULE_lhs = 42
    RULE_if_stmts = 43
    RULE_for_stmts = 44
    RULE_scalar_var = 45
    RULE_break_stmts = 46
    RULE_continue_stmts = 47
    RULE_return_stmts = 48
    RULE_invocation_stmts = 49
    RULE_constructor = 50

    ruleNames =  [ "program", "classDecle", "inheri", "classBody", "members", 
                   "attribute", "mulable", "immutable", "typAttribute", 
                   "primitive_type", "array_type", "size", "class_type", 
                   "nonNullAttlist", "attName", "exprs", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "expr8", 
                   "expr9", "expr10", "operands", "expr_list", "index_Expr", 
                   "method", "normalMethod", "static_method", "unstatic_method", 
                   "typMethod", "paramsList", "params", "param", "idList", 
                   "block_stmts", "vardecle", "stmts", "assign_stmts", "lhs", 
                   "if_stmts", "for_stmts", "scalar_var", "break_stmts", 
                   "continue_stmts", "return_stmts", "invocation_stmts", 
                   "constructor" ]

    EOF = Token.EOF
    EQ=1
    ASSIGN=2
    BOOLEAN=3
    BREAK=4
    CLASS=5
    CONTINUE=6
    DO=7
    ELSE=8
    EXTENDS=9
    FLOAT=10
    IF=11
    INT=12
    NEW=13
    STRING=14
    THEN=15
    FOR=16
    RETURN=17
    TRUE=18
    FALSE=19
    VOID=20
    NIL=21
    THIS=22
    FINAL=23
    STATIC=24
    TO=25
    DOWNTO=26
    ID=27
    ADD=28
    SUB=29
    MUL=30
    FLDIV=31
    INDIV=32
    MOD=33
    NOTEQUAL=34
    EQUAL=35
    LESS=36
    GREATER=37
    LQ=38
    GQ=39
    OR=40
    AND=41
    NOT=42
    CONCA=43
    LSB=44
    RSB=45
    LP=46
    RP=47
    LB=48
    RB=49
    SEMI=50
    COLON=51
    DOT=52
    COMMA=53
    INTLIT=54
    FLOATLIT=55
    BOOLIT=56
    STRINGLIT=57
    ARRLIT=58
    BLOCK_COMMENT=59
    LINE_COMMENT=60
    WS=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def classDecle(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ClassDecleContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ClassDecleContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 102
                self.classDecle()
                self.state = 105 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLASS):
                    break

            self.state = 107
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDecleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def classBody(self):
            return self.getTypedRuleContext(BKOOLParser.ClassBodyContext,0)


        def inheri(self):
            return self.getTypedRuleContext(BKOOLParser.InheriContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classDecle

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecle" ):
                return visitor.visitClassDecle(self)
            else:
                return visitor.visitChildren(self)




    def classDecle(self):

        localctx = BKOOLParser.ClassDecleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDecle)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(BKOOLParser.CLASS)
            self.state = 110
            self.match(BKOOLParser.ID)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 111
                self.inheri()


            self.state = 114
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InheriContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_inheri

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInheri" ):
                return visitor.visitInheri(self)
            else:
                return visitor.visitChildren(self)




    def inheri(self):

        localctx = BKOOLParser.InheriContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inheri)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(BKOOLParser.EXTENDS)
            self.state = 117
            self.match(BKOOLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def members(self):
            return self.getTypedRuleContext(BKOOLParser.MembersContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classBody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = BKOOLParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(BKOOLParser.LP)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.VOID) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.ID))) != 0):
                self.state = 120
                self.members()


            self.state = 123
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MembersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.AttributeContext,i)


        def method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.MethodContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.MethodContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_members

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMembers" ):
                return visitor.visitMembers(self)
            else:
                return visitor.visitChildren(self)




    def members(self):

        localctx = BKOOLParser.MembersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_members)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 127
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 125
                    self.attribute()
                    pass

                elif la_ == 2:
                    self.state = 126
                    self.method()
                    pass


                self.state = 129 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.VOID) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mulable(self):
            return self.getTypedRuleContext(BKOOLParser.MulableContext,0)


        def immutable(self):
            return self.getTypedRuleContext(BKOOLParser.ImmutableContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = BKOOLParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.mulable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.immutable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MulableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typAttribute(self):
            return self.getTypedRuleContext(BKOOLParser.TypAttributeContext,0)


        def nonNullAttlist(self):
            return self.getTypedRuleContext(BKOOLParser.NonNullAttlistContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_mulable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulable" ):
                return visitor.visitMulable(self)
            else:
                return visitor.visitChildren(self)




    def mulable(self):

        localctx = BKOOLParser.MulableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mulable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 135
                self.match(BKOOLParser.STATIC)


            self.state = 138
            self.typAttribute()
            self.state = 139
            self.nonNullAttlist()
            self.state = 140
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImmutableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typAttribute(self):
            return self.getTypedRuleContext(BKOOLParser.TypAttributeContext,0)


        def nonNullAttlist(self):
            return self.getTypedRuleContext(BKOOLParser.NonNullAttlistContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_immutable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImmutable" ):
                return visitor.visitImmutable(self)
            else:
                return visitor.visitChildren(self)




    def immutable(self):

        localctx = BKOOLParser.ImmutableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_immutable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.STATIC:
                    self.state = 142
                    self.match(BKOOLParser.STATIC)


                self.state = 145
                self.match(BKOOLParser.FINAL)
                pass

            elif la_ == 2:
                self.state = 146
                self.match(BKOOLParser.FINAL)
                self.state = 147
                self.match(BKOOLParser.STATIC)
                pass


            self.state = 150
            self.typAttribute()
            self.state = 151
            self.nonNullAttlist()
            self.state = 152
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypAttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(BKOOLParser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(BKOOLParser.Array_typeContext,0)


        def class_type(self):
            return self.getTypedRuleContext(BKOOLParser.Class_typeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_typAttribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypAttribute" ):
                return visitor.visitTypAttribute(self)
            else:
                return visitor.visitChildren(self)




    def typAttribute(self):

        localctx = BKOOLParser.TypAttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typAttribute)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.primitive_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.array_type()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 156
                self.class_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(BKOOLParser.INT, 0)

        def FLOAT(self):
            return self.getToken(BKOOLParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(BKOOLParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(BKOOLParser.STRING, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_primitive_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_type" ):
                return visitor.visitPrimitive_type(self)
            else:
                return visitor.visitChildren(self)




    def primitive_type(self):

        localctx = BKOOLParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(BKOOLParser.Primitive_typeContext,0)


        def LSB(self):
            return self.getToken(BKOOLParser.LSB, 0)

        def size(self):
            return self.getTypedRuleContext(BKOOLParser.SizeContext,0)


        def RSB(self):
            return self.getToken(BKOOLParser.RSB, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = BKOOLParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.primitive_type()
            self.state = 162
            self.match(BKOOLParser.LSB)
            self.state = 163
            self.size()
            self.state = 164
            self.match(BKOOLParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKOOLParser.INTLIT, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_size

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSize" ):
                return visitor.visitSize(self)
            else:
                return visitor.visitChildren(self)




    def size(self):

        localctx = BKOOLParser.SizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_size)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(BKOOLParser.INTLIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_class_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_type" ):
                return visitor.visitClass_type(self)
            else:
                return visitor.visitChildren(self)




    def class_type(self):

        localctx = BKOOLParser.Class_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_class_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(BKOOLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NonNullAttlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.AttNameContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.AttNameContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.COMMA)
            else:
                return self.getToken(BKOOLParser.COMMA, i)

        def getRuleIndex(self):
            return BKOOLParser.RULE_nonNullAttlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNonNullAttlist" ):
                return visitor.visitNonNullAttlist(self)
            else:
                return visitor.visitChildren(self)




    def nonNullAttlist(self):

        localctx = BKOOLParser.NonNullAttlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_nonNullAttlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.attName()
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKOOLParser.COMMA:
                self.state = 171
                self.match(BKOOLParser.COMMA)
                self.state = 172
                self.attName()
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttNameContext(ParserRuleContext):
        __slots__ = 'parser'
